--- a/lab.html
+++ b/lab.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lab Homework</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <header>
@@ -16,7 +17,9 @@
   </section>
   
   <nav>
-    <a href="index.html">Back to Main Page</a>
+    <ul>
+      <li><a href="index.html">Back to Main Page</a></li>
+    </ul>
   </nav>
   
   <footer>
