--- a/lab.html
+++ b/lab.html
@@ -13,7 +13,42 @@
   
   <section>
     <!-- Content for Lab Homework will go here -->
-    <p>This page will be filled with Lab Homework content later.</p>
+    <h2>Lab Homework 1: Setup Blog</h2>
+    <p>
+        This week I set up the blog. I decided to use Github Pages for that. Since I have not done any web development,
+        I created this page with the help of chathpt.
+    </p>
+
+    <h2>Lab Homework 2: Setup Unity:</h2>
+    <p>I already had some experience with Unity so Unity was already set up on my PC. I use Unity version 2022.3.10.f1.</p>
+    <p>
+        This week I decided to create a bowling seen. To do that I created the scene by using set of cubes.
+        <img src="./images/cube.png" alt="Description of the image" width="800" height="400">
+        I also created some material to make the scene colorful.
+        <img src="./images/materials.png" alt="Description of the image" width="800" height="200">
+        I also added pins as cylinder objects. Here is the scene
+        <img src="./images/scene.png" alt="Description of the image" width="800" height="400">
+        Finally I added colliders to bowling ball, floor and pins, and added rigidbody components to bowling ball to have a dynamic scene. 
+        Here is the result.
+        <img src="./images/strike.png" alt="Description of the image" width="800" height="350">
+    </p>
+
+    <h2>Lab Homework 5: Selection Pitch</h2>
+
+    <p>
+        This week I and Jean-Loup presented 2 selection techniques: selection by filtering and selection by Portls,
+        after the presentation, we discussed with the professor and decided to implement portal selection. 
+    </p>
+
+    <a href="selection_techniques.pdf" target="_blank">Selection Techniques pdf</a>
+
+    <h2>Lab Homework 6: Selection technique Implementation</h2>
+
+    <p>
+        This week I and Jean-Loup presented our project. The details are explained in Jean-Loup's blog.
+        <a href="https://perso.telecom-paristech.fr/jlarette-22/">Jean-Loup blog</a>
+    </p>
+
   </section>
   
   <nav>
