--- a/lectures.html
+++ b/lectures.html
@@ -109,7 +109,7 @@
 
     <p>
         This week I and Jean-Loup presented our project. The details are explained in Jean-Loup's blog.
-        <a href="https://perso.telecom-paristech.fr/jlarette-22/IGD301" target="_blank">Jean-Loup blog</a>
+        <a href="https://perso.telecom-paristech.fr/jlarette-22/">Jean-Loup blog</a>
     </p>
 
   </section>
