--- a/lab.html
+++ b/lab.html
@@ -33,6 +33,23 @@
         <img src="./images/strike.png" alt="Description of the image" width="800" height="350">
     </p>
 
+    <h2>Lab Homework 3: Unity Roll-A-Ball</h2>
+
+    <p>
+        This week I followed Unity's roll a ball tutorial. Since I have already some experience with Unity, the implementation was 
+        pretty straightforard and I did not encounter any particular problem. Here is a scene from my implementation.
+        <img src="./images/roll_a_ball/roll_a_ball.png" alt="Description of the image" width="800" height="600">
+
+        I wanted to make this project more interesting so I added some obstacle to the scene. I created a prefab called "bomb", with a sphere
+        collider and a rigidbody.
+        <img src="./images/roll_a_ball/bomb.png" alt="Description of the image" width="800" height="400">
+        The mechanic is that if the player toches the bomb, player uses 2 points. The bomb also becomes red if the player 
+        hits it. Here is the code for that.
+        <img src="./images/roll_a_ball/bomb_code.png" alt="Description of the image" width="800" height="400">
+        Finally I putted some obsticales on the scene.
+        <img src="./images/roll_a_ball/intersection.png" alt="Description of the image" width="800" height="400">
+    </p>
+
     <h2>Lab Homework 5: Selection Pitch</h2>
 
     <p>
