lab homework finished

--- a/lab.html
+++ b/lab.html
@@ -50,6 +50,29 @@
         <img src="./images/roll_a_ball/intersection.png" alt="Description of the image" width="800" height="400">
     </p>
 
+    <h2>Lab Homework 4: Unity Roll-A-Ball in VR</h2>
+    <p>
+      This week I implemented the VR version of Roll-A-Ball. I haven't worked with Unity VR before so this was a new experience for me.
+      I had a little bit difficulties to associate meta application with meta quest therefore I could not work in real time with Unity.
+      I had to build the apk file and send it to the meta quest for each time I wanted to test the algorithm.
+    </p>
+
+    <p>
+      I started by creating the scene and setting the camera. I did not use the default Unity camera but I used OVRCameraRig.
+      <img src="./images/vr/camera.png" alt="Description of the image" width="800" height="400">
+      Then I exported my roll a boll project and imported it to my vr project.
+      <img src="./images/vr/roll a ball.png.png" alt="Description of the image" width="800" height="400">
+      I decided to implement a direct selection method to be able to hold the roll a ball platform and move the ball by rotating my hand.
+      To do that I added a sphere collider to right and left hand controller. I also adjusted the layers in a way that the platform only detects
+      collision with hand devices.
+      <img src="./images/vr/controller.png" alt="Description of the image" width="800" height="400">
+      And here is the logic of my selection technique.
+      <img src="./images/vr/code.png" alt="Description of the image" width="800" height="400">
+      Finally I build the final project and I was able to select and rotate the platform with the hand devices. I have to say that the game
+      became much more interesting!
+      <img src="./images/vr/final.jpg" alt="Description of the image" width="800" height="600">
+    </p>
+
     <h2>Lab Homework 5: Selection Pitch</h2>
 
     <p>
